style.css
body {
  font-family: 'Roboto', sans-serif;
  background-color: rgb(245, 245, 245);
}

h1 {
  font-family: 'Amatic SC', cursive;
}

.container {
  display: flex;
  flex-direction: row;
}

.image-container {
  background-image: url('images/nikola-johnny-mirkovic-qlqPeDMV6Xc-unsplash.jpg');
  background-size: cover;
  width: 100%;
  height: 100vh;
  flex: 2;
}

.logo-div {
  font-family: 'Amatic SC', cursive;
  font-size: 46px;
  background-color: rgba(0, 0, 0, 0.246);
  color: white;
  text-align: center;
  width: 100%;
  padding: 25px 0;
  position: relative;
  top: 100px;
}

.icon {
  font-size: 1.01em;
  position: relative;
  top: 5px;
  right: 5px;
}
.main-content {
  flex: 4;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.header-paras {
  width: 80%;
  margin-top: 80px;
  margin-bottom: 40px;
}

p {
  margin-bottom: 20px;
}

p:last-child {
  margin-top: 20px;
  width: 80%;
}

input {
  padding: 6px 3px;
  border: 1px solid #e5e7eb;
  border-radius: 5px;
}

input:focus {
  outline: 1px solid rgb(58, 71, 101);
  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
}

.main-content p {
  font-size: 18px;
}

form {
  width: 100%;
  background-color: white;
  display: flex;
  flex-direction: column;
  align-items: center;
  box-shadow: rgba(50, 50, 93, 0.02) 0px 2px 5px -1px,
    rgba(0, 0, 0, 0.05) 0px 1px 3px -1px;
}

form > * {
  width: 80%;
}

h2 {
  font-size: 18px;
  margin: 20px 0;
}

.horizontal-inputs {
  display: flex;
  gap: 70px;
}

.input {
  display: flex;
  flex-direction: column;
  margin: 10px 0;
}

label {
  margin-bottom: 3px;
  font-size: 12px;
  letter-spacing: 1px;
  text-transform: uppercase;
  color: rgb(77, 77, 77);
}

.btn-div {
  margin: 20px 0;
}

button {
  width: 160px;
  padding: 10px 4px;
  background-color: rgb(58, 71, 101);
  color: white;
  border: none;
  border-radius: 5px;
  cursor: pointer;
}

